# linux-fs-audit

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml  semantic-versioning.yml
resources/: settings.json  setup_auditd.sh
src/: main.rs
src/controller/: mod.rs  unix_port.rs
src/port/: mod.rs  unix_port.rs
src/serializer/: audit_parse.rs  mod.rs
src/settings/: mod.rs
src/view/: http_view.rs  mock_view.rs  mod.rs  sqlite_view.rs
test_resources/: all_present.json  dispatcher_present.json  http_present.json  log_present.json  sqlite_present.json  view_present.json
