[package]
name = "linux-fs-audit"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
snailquote = "0.3.1"
async-trait = "0.1.74"
serde = { version = "1.0.190", features = ["derive"] }
log = "0.4.20"
simple_logger = "4.1.0"
colored = "2.0.4"